# HTV-Learn

./: .gitignore  LICENSE  README.md  README.rst  algorithm.py  base_cpwl.py  conftest.py  data.py  delaunay.py  grid.py  htv_manager.py  htv_project.py  htv_utils.py  lattice.py  lattice_image.py  main.py  master_project.py  nn_dataloader.py  nn_manager.py  nn_project.py  operators.py  pytest.ini  rbf.py  rbf_manager.py  rbf_project.py  requirements.txt  setup.cfg  setup.py  struct_default_values.py
bash_scripts/: cut_face_gaps_htv.sh  cut_face_gaps_nn.sh  cut_face_gaps_rbf.sh  face_htv.sh  face_nn.sh  face_rbf.sh  htv_sigma_face.sh  htv_sigma_qtp.sh  non_uniform_face_htv.sh  non_uniform_face_nn.sh  non_uniform_htv_sigma_face.sh  plot_htv_vs_num_hidden_neurons.sh  plot_num_hidden_neurons_vs_htv.sh  plot_test_snr_vs_num_hidden_neurons.sh  plot_weight_decay_vs_htv.sh  qtp_htv.sh  qtp_nn.sh  qtp_rbf.sh  uniform_face_htv.sh
face_data/: face_func_no_texture.py  face_func_texture.py  face_mesh_no_texture.py  face_mesh_texture.py
htvlearn/: __init__.py  algorithm.py  data.py  delaunay.py  grid.py  hessian.py  htv_manager.py  htv_project.py  htv_utils.py  lattice.py  main.py  master_project.py  nn_dataloader.py  nn_manager.py  nn_project.py  operators.py  rbf.py  rbf_manager.py  rbf_project.py  struct_default_values.py
models/: __init__.py  deepfcnet2d.py  fcnet2d.py
plots/: base_plot.py  box_spline_plot.py  lattice_plot.py  non_uniform_plot.py  plot.py  plot_cpwl.py  two_triangles_plot.py
scripts/: generate_cpwl.py  get_same_train_mse.py  htv_discretizations.py  merge_json_results.py  nn_recompute_train_mse.py  nn_write_htv_to_json.py  plot_algorithm.py  plot_data.py  plot_htv_exact_vs_finite_diff.py  (+14 more)
(+43 files in other folders)
