metadata]
name = htvlearn
# also change in htvlearn.__init__.py
version = 0.0.1
author = Joaquim Campos
author_email = joaquimcampos15@hotmail.com
description = A framework for regularized supervised learning and measuring model complexity
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/joaquimcampos/HTV-Learn
keywords =
    supervised learning
    variational methods
    sparsity
    box splines
    regularization
    barycentric coordinates
project_urls =
    Bug Tracker = https://github.com/joaquimcampos/HTV-Learn/issues
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.10
    torch >= 1.5.1
    matplotlib >= 3.3.1
#     torchvision >= 0.2.2
scripts =
    htvlearn/main.py
    scripts/generate_cpwl.py
    scripts/get_same_train_mse.py
    scripts/htv_discretizations.py
    scripts/merge_json_results.py
    scripts/plot_data.py
    scripts/plot_htv_exact_vs_finite_diff.py
    scripts/plot_htv_vs_parameter.py
    scripts/plot_model.py
    scripts/print_model.py
    scripts/sort_json_results.py

[options.extras_require]
dev =
    autopep8
    flake8
    yapf

[flake8]
per-file-ignores =
    */__init__.py: F401
ignore = W504,W605

[pycodestyle]
ignore = W504,W605
